Adding Back to Top Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HeroList</string>
+    <string name="scroll_to_top">Scroll to Top</string>
+    <string name="search_hero">Find Hero</string>
 </resources>
